--- a/app/src/main/res/layout/activity_view__nama__danis.xml
+++ b/app/src/main/res/layout/activity_view__nama__danis.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".View_Nama_Danis">
-
+//membuat list view dengan relative layout
     <ListView
         android:id="@+id/list"
         android:layout_width="match_parent"
